force-app/main/default/objects/FileProcessingRequest__c/FileProcessingRequest__c.object-meta.xml
<CustomObject>
    <description>Object used for video processing</description>
    <label>File Processing Request</label>
    <nameField>
        <displayFormat>FPR-{00000}</displayFormat>
        <label>File Processing Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Processing Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>