force-app/main/default/objects/FileProcessingRequest__c/fields/Advice__c.field-meta.xml
<CustomField>
    <fullName>Advice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>If the file processed is for a risk call or advice meeting, this relationship field will be populated with the advice record.</description>
    <label>Advice</label>
    <referenceTo>Advice__c</referenceTo>
    <relationshipLabel>File Processing Requests</relationshipLabel>
    <relationshipName>FileProcessingRequests</relationshipName>
    <type>Lookup</type>
</CustomField>