force-app/main/default/objects/FileProcessingRequest__c/fields/FailedCode__c.field-meta.xml
<CustomField>
    <fullName>FailedCode__c</fullName>
    <description>Store the error code from NOVA service if processing has failed</description>
    <label>Failed code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RAISE_SALESFORCE_ISSUE</fullName>
            </value>
            <value>
                <fullName>NOT_FOUND</fullName>
            </value>
            <value>
                <fullName>SERVICE_UNAVAILABLE</fullName>
            </value>
            <value>
                <fullName>TOO_MANY_REQUESTS</fullName>
            </value>
            <value>
                <fullName>INTERNAL_SERVER_ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>