force-app/main/default/objects/FileProcessingRequest__c/fields/FailedMessage__c.field-meta.xml
<CustomField>
    <fullName>FailedMessage__c</fullName>
    <description>Friendly message to display to users/admins when processing has failed</description>
    <label>Failed message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>