force-app/main/default/objects/FileProcessingRequest__c/fields/FileId__c.field-meta.xml
<CustomField>
    <fullName>FileId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>GDrive id (if type is video / mp3)</description>
    <label>File ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>