force-app/main/default/objects/FileProcessingRequest__c/fields/FileType__c.field-meta.xml
<CustomField>
    <fullName>FileType__c</fullName>
    <label>File type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Audio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>