force-app/main/default/objects/FileProcessingRequest__c/fields/JsonData__c.field-meta.xml
<CustomField>
    <fullName>JsonData__c</fullName>
    <description>Stores JSON data that the Nova service may wish to associate with this video.</description>
    <label>JSON data</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>