force-app/main/default/objects/FileProcessingRequest__c/fields/MeetingDate__c.field-meta.xml
<CustomField>
    <fullName>MeetingDate__c</fullName>
    <description>Date disco meeting took place</description>
    <label>Meeting date</label>
    <type>DateTime</type>
</CustomField>