force-app/main/default/objects/FileProcessingRequest__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>If the file processed is for a disco meeting, this relationship field will be populated with the discovery opportunity.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>File Processing Requests</relationshipLabel>
    <relationshipName>FileProcessingRequests</relationshipName>
    <type>Lookup</type>
</CustomField>