force-app/main/default/objects/FileProcessingRequest__c/fields/PlatformCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>PlatformCreatedBy__c</fullName>
    <description>Records the ID of the person that created this record. The value will either be a user ID or the ID of a person account belonging to a customer who made the update via the portal. Will only be populated if the record was created via the portal.</description>
    <label>Platform created by</label>
    <length>18</length>
    <type>Text</type>
</CustomField>