force-app/main/default/objects/FileProcessingRequest__c/fields/PlatformLastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlatformLastModifiedDateTime__c</fullName>
    <description>To record the date and time the record was last modified in Nova Service.</description>
    <label>Platform last modified date time</label>
    <type>DateTime</type>
</CustomField>