force-app/main/default/objects/FileProcessingRequest__c/fields/ProcessingStatus__c.field-meta.xml
<CustomField>
    <fullName>ProcessingStatus__c</fullName>
    <label>Processing status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SCHEDULED VIDEO-TO-WAV</fullName>
            </value>
            <value>
                <fullName>SCHEDULED AUDIO-TO-TRANSCRIPT</fullName>
            </value>
            <value>
                <fullName>SCHEDULED TRANSCRIPT-TO-SUMMARY</fullName>
            </value>
            <value>
                <fullName>PENDING MANUAL LABEL</fullName>
            </value>
            <value>
                <fullName>PENDING MANUAL MIGRATION</fullName>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>