force-app/main/default/objects/FileProcessingRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FileId__c</columns>
    <columns>ProcessingStatus__c</columns>
    <columns>JsonData__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>